# KrasivoBot

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  JenkinsfileDeploy  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
krasivo_bot/: __main__.py  bot.py  config.py  handlers.py  transform.py
